sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i <- 0 to L.length-2 ){
    if (L(i) > L(i+1)){
      echange(i,i+1)
    }
  }
}